Set up for Wordle database

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <body>
         <div class="container">
             <img src="assets/Par4.png">
-            <input type="text" id="input-field" placeholder="Bread">
-            <button id="add-button">Add to cart</button>
+            <input type="text" id="input-field" placeholder="Wordle">
+            <button id="add-button">Add the solution</button>
             <ul id="shopping-list">
             </ul>
         </div>
