Added guess number field

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div class="container">
             <img src="assets/Par4.png">
             <input type="text" id="input-field" placeholder="Wordle">
+            <input type="text" id="guess-number" placeholder="#">
             <button id="add-button">Add the solution</button>
             <ul id="shopping-list">
             </ul>
