--- a/index.html
+++ b/index.html
@@ -18,6 +18,21 @@
             <input type="text" id="input-field" placeholder="Wordle">
             <input type="text" id="guess-number" placeholder="#">
             <button id="add-button">Add the solution</button>
+            <h2>Eagle (2)</h2>
+            <ul id="eagle-list">
+            </ul>
+            <h2>Birdie (3)</h2>
+            <ul id="birdie-list">
+            </ul>
+            <h2>Par (4)</h2>
+            <ul id="par-list">
+            </ul>
+            <h2>Bogey (5)</h2>
+            <ul id="bogey-list">
+            </ul>
+            <h2>Double Bogey (6)</h2>
+            <ul id="dblbogey-list">
+            </ul>
             <ul id="shopping-list">
             </ul>
         </div>
