--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <body>
         <div class="container">
             <img src="assets/Par4.png">
-            <input type="text" id="input-field" placeholder="Wordle">
-            <input type="text" id="guess-number" placeholder="#">
+            <input type="text" id="input-field" placeholder="solution">
+            <input type="text" id="guess-number" placeholder="# of guesses">
             <button id="add-button">Add the solution</button>
             <h2>Eagle (2)</h2>
             <ul id="eagle-list">
