--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <h2>Double Bogey (6)</h2>
             <ul id="dblbogey-list">
             </ul>
+            <h2>A hole in one!</h2>>
             <ul id="shopping-list">
             </ul>
         </div>
