--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
             <input type="text" id="input-field" placeholder="solution">
             <input type="text" id="guess-number" placeholder="# of guesses">
             <button id="add-button">Add the solution</button>
-            <h2>Eagle (2)</h2>
-            <ul id="eagle-list">
-            </ul>
-            <h2>Birdie (3)</h2>
-            <ul id="birdie-list">
-            </ul>
-            <h2>Par (4)</h2>
-            <ul id="par-list">
-            </ul>
-            <h2>Bogey (5)</h2>
-            <ul id="bogey-list">
-            </ul>
-            <h2>Double Bogey (6)</h2>
-            <ul id="dblbogey-list">
-            </ul>
+            <h2 id="golf-score"></h2>
+            <table>
+                <th>
+                    <td>Eagle (2)</td>
+                    <td>Birdie (3)</td>
+                    <td>Par (4)</td>
+                    <td>Bogey (5)</td>
+                    <td>Dbl Bogey (6)</td>
+                </th>
+                <tr>
+                    <td><ul id="eagle-list"></ul></td>
+                    <td><ul id="birdie-list"></ul></td>
+                    <td><ul id="par-list"></ul></td>
+                    <td><ul id="bogey-list"></ul></td>
+                    <td><ul id="dblbogey-list"></ul><td>
+                </tr>
+            </table>
             <h2>A hole in one!</h2>
             <ul id="shopping-list">
             </ul>
