--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <td><ul id="birdie-list"></ul></td>
                     <td><ul id="par-list"></ul></td>
                     <td><ul id="bogey-list"></ul></td>
-                    <td><ul id="dblbogey-list"></ul><td>
+                    <td><ul id="dblbogey-list"></ul></td>
                 </tr>
             </table>
             <h2>A hole in one!</h2>
