--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <button id="add-button">Add the solution</button>
             <h2 id="golf-score"></h2>
             <table>
-                <th>
-                    <td>Eagle (2)</td>
-                    <td>Birdie (3)</td>
-                    <td>Par (4)</td>
-                    <td>Bogey (5)</td>
-                    <td>Dbl Bogey (6)</td>
-                </th>
+                <tr>
+                    <th>Eagle (2)</th>
+                    <th>Birdie (3)</th>
+                    <th>Par (4)</th>
+                    <th>Bogey (5)</th>
+                    <th>Dbl Bogey (6)</th>
+                </tr>
                 <tr>
                     <td><ul id="eagle-list"></ul></td>
                     <td><ul id="birdie-list"></ul></td>
